<resources>
    <string name="app_name">Authentication_App</string>
    <string name="client_id">493940988327-oa2hpg3vl4jas4fljhbs8rjsvqbt6b08.apps.googleusercontent.com</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="user_profile">User Profile</string>
    <string name="user_details">User Details</string>
    <string name="sign_in">Sign in</string>

</resources>