<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/userprofile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="15dp"/>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lotti"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:lottie_rawRes="@raw/profile1"
        app:layout_constraintTop_toBottomOf="@id/userprofile"
        app:lottie_repeatCount="1"
        app:lottie_autoPlay="true"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:textSize="25sp"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lotti"
        android:layout_marginTop="50dp"
        android:text="@string/user_details"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:id="@+id/uid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/details"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/uid"
        app:layout_constraintStart_toStartOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/logoutbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="150dp"
        android:text="@string/logout"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>


