<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="#ADEFD1"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="570dp"
        android:layout_margin="30dp"
        android:background="#d3d3d3"
        app:cardCornerRadius="30dp"
        app:cardElevation="30dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        tools:layout_editor_absoluteX="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="30dp"
                android:src="@drawable/vd_vector" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#00203F"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="32sp" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="14dp"
                android:hint="Email"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_log"
                    android:backgroundTint="#fff1e1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    app:layout_constraintTop_toTopOf="parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_log"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#fff1e1"
                android:layout_marginStart="14dp"
                android:layout_marginEnd="14dp"
                android:layout_marginTop="8dp"
                android:hint="@string/password"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/inputpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    app:layout_constraintTop_toTopOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#00203F"
                android:layout_marginTop="40dp"
                android:text="@string/login"
                android:layout_marginStart="130dp"/>


<!--            <androidx.cardview.widget.CardView-->
<!--                android:id="@+id/Signin"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="70dp"-->
<!--                android:layout_gravity="center"-->
<!--                android:layout_margin="50dp"-->
<!--                android:clickable="true"-->
<!--                android:focusable="true"-->
<!--                app:cardCornerRadius="20dp"-->
<!--                app:cardElevation="30dp">-->

<!--                <LinearLayout-->

<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:background="#4285F4"-->
<!--                    android:padding="5dp">-->

<!--                    <com.google.android.gms.common.SignInButton-->

<!--                        android:id="@+id/sign_in_button"-->

<!--                        android:layout_width="wrap_content"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        android:layout_marginLeft="5dp"-->
<!--                        android:layout_marginTop="5dp"-->
<!--                        android:layout_marginRight="5dp"-->
<!--                        android:layout_marginBottom="5dp" />-->

<!--                </LinearLayout>-->


<!--            </androidx.cardview.widget.CardView>-->


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp">
            <TextView
                android:id="@+id/donthave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_an_account"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="35dp"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/logintoregister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:foreground="?attr/selectableItemBackground"
                app:layout_constraintStart_toEndOf="@id/donthave"
                android:textStyle="bold"
                android:textSize="16sp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>